--- a/static/web/list.html
+++ b/static/web/list.html
@@ -3,16 +3,16 @@
 <html><head>
  <meta charset="UTF-8" /><meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.5, user-scalable=yes" />
  <title>Loading - Wilderness Ranger</title>
- <link rel="stylesheet" href="/data/main.min.css" />
- <link rel="stylesheet" href="/data/font/icons.css" />
- <script src="/data/marked.min.js"></script>
+ <link rel="stylesheet" href="/web/main.min.css" />
+ <link rel="stylesheet" href="/web/font/icons.css" />
+ <script src="/web/marked.min.js"></script>
  <script src="//cdn.jsdelivr.net/npm/prismjs@1.22/components/prism-core.min.js"></script>
  <script src="//cdn.jsdelivr.net/npm/prismjs@1.22/plugins/autoloader/prism-autoloader.min.js"></script>
- <link rel="stylesheet" href="/data/prism.css" />
+ <link rel="stylesheet" href="/web/prism.css" />
 </head><body>
 
 <nav id="floater">
- <img class="floater-avatar" src="/data/avatar.png" /><a class="floater-header" href="/main">Wilderness Ranger</a>
+ <img class="floater-avatar" src="/web/avatar.png" /><a class="floater-header" href="/main">Wilderness Ranger</a>
  <button class="floater-menu icon" title="Settings">⚙</button><ul class="floater-cascade">
   <a class="icon-list" onclick="interact('M');">Markdown</a>
   <hr />
@@ -38,7 +38,7 @@
  </article>
 </main>
 
-<script src="/data/main.min.js"></script>
+<script src="/web/main.min.js"></script>
 <script type="text/javascript">"use strict";
 var url = "/blog/";
 
