--- a/static/web/view.html
+++ b/static/web/view.html
@@ -5,7 +5,6 @@
  <title>Loading - Wilderness Ranger</title>
  <link rel="stylesheet" href="/web/main.min.css" />
  <link rel="stylesheet" href="/web/font/icons.css" />
- <script src="/web/marked.min.js"></script>
  <script src="//cdn.jsdelivr.net/npm/prismjs@1.22/components/prism-core.min.js"></script>
  <script src="//cdn.jsdelivr.net/npm/prismjs@1.22/plugins/autoloader/prism-autoloader.min.js"></script>
  <link rel="stylesheet" href="/web/prism.css" />
@@ -19,7 +18,7 @@
   <a class="icon-moon" onclick="interact('D');">Auto</a>
  </ul>
  <button class="floater-menu icon" title="Information">i</button><ul class="floater-cascade">
-  <a href="https://github.com/WRtux/blog">Version 0.3</a>
+  <a href="https://github.com/WRtux/blog">Version 0.4</a>
  </ul>
 </nav>
 
@@ -31,12 +30,14 @@
  </article>
 </main>
 
+<script src="/web/marked.min.js"></script>
+
 <script src="/web/main.min.js"></script>
 <script type="text/javascript">"use strict";
-var url = location.pathname;
-url = url.replace(new RegExp("^/list/(?=.+/)"), "/project/");
-url = url.replace(new RegExp("^/list/"), "/blog/");
-url += ".md";
+var url = location.pathname
+	.replace(new RegExp(`^/list/(?=.+/)`), "/project/")
+	.replace(new RegExp(`^/list/`), "/blog/")
+	.replace(new RegExp(`^/[^./]+$`), '$&.md');
 
 function interact(act) {
 	switch(act) {
@@ -51,9 +52,9 @@ function interact(act) {
 	}
 }
 
-(function () {
-	renderDirect("marked", url);
-})();
+void async function () {
+	await renderURL('marked', url);
+}();
 
 </script>
 </body></html>
